second module for testing persistence with multiple datasources
